--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "electron-releases": "^3.942.0",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.3.0",
+    "helmet": "^5.0.2",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.0.0",
     "nodemailer": "^6.7.3",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "electron-packager": "^15.4.0",
